Update it-IT.json (Update #4.1) (Unfinished)
nvm 51 translations left

--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -9,7 +9,7 @@
   "NX/COLOUR/INPUT/PRE": "HEX:",
   "NX/COLOUR/R": "Rosso:",
   "NX/COLOUR/R/PRE": "R: ",
-  "NX/COLOUR/RESET": "",
+  "NX/COLOUR/RESET": "",                                                                                                                               <<<<<<<<<<<<<<<<<<
   "HOME": "Mega Hack",
   "HOME/LANGUAGE": "Lingua: ",
   "HOME/SEARCH": "Cerca: ",
