translations es-MX.json
Updated translations
tysm to alvariitoo and cyraaxgz for helping in translations and fixes!

============================================
Se actualizaron las traducciones
¡Muchas gracias a alvariithoo y a cyraaxgz por ayudarme a arreglar las traducciones!

--- a/langs/es-MX.json
+++ b/langs/es-MX.json
@@ -271,62 +271,62 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/3": "Alto",
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Muy alto",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Prioridad de hilos",
-  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Afecta cuanto tiempo del GPU obtiene el juego. Puede aumentar el rendimiento.",
-  "SPEEDHACK": "",
-  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
-  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
-  "SPEEDHACK/LAYOUT/SPINNER": "",
-  "SPEEDHACK/LAYOUT/SPINNER/PRE": "",
-  "SPEEDHACK/LAYOUT/SPINNER/SUF": "",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "",
-  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "",
+  "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Afecta cuantas tareas puede realizar Geometry Dash. Puede aumentar el rendimiento.",
+    "SPEEDHACK": "Speedhack",
+  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Activado",
+  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Cambia la velocidad del juego.",
+  "SPEEDHACK/LAYOUT/SPINNER": "Velocidad:",
+  "SPEEDHACK/LAYOUT/SPINNER/PRE": "Velocidad: ",
+  "SPEEDHACK/LAYOUT/SPINNER/SUF": "x",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "Ajustar audio",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "Sincroniza la velocidad del juego con el audio del juego.",
+  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "Modo clásico",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
-  "DISPLAY": "",
-  "DISPLAY/FPS/SPINNER": "",
-  "DISPLAY/FPS/SPINNER/SUF": "",
-  "DISPLAY/FPS/HACK_FPS": "",
-  "DISPLAY/FPS/HACK_FPS/TIP": "",
-  "DISPLAY/TPS/SPINNER": "",
-  "DISPLAY/TPS/SPINNER/SUF": "",
-  "DISPLAY/TPS/HACK_TPS": "",
-  "DISPLAY/FPS/HACK_TPS/TIP": "",
-  "DISPLAY/HACK_VSYNC": "",
-  "DISPLAY/HACK_VSYNC/TIP": "",
-  "DISPLAY/HACK_PHYSICS_BYPASS": "",
-  "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "",
-  "DISPLAY/DELTA/HACK_REAL_TIME": "",
-  "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
-  "DISPLAY/FULLSCREEN/COMBO/0": "",
-  "DISPLAY/FULLSCREEN/COMBO/1": "",
-  "UTILITY": "",
-  "UTILITY/CLICKS/P1": "",
-  "UTILITY/CLICKS/P2": "",
-  "UTILITY/DIRECTIONAL/P1_LEFT": "",
-  "UTILITY/DIRECTIONAL/P1_RIGHT": "",
-  "UTILITY/DIRECTIONAL/P2_LEFT": "",
-  "UTILITY/DIRECTIONAL/P2_RIGHT": "",
-  "UTILITY/UNCOMPLETE_LEVEL": "",
-  "UTILITY/UNCOMPLETE_LEVEL/TIP": "",
-  "UTILITY/RESTART_LEVEL": "",
-  "UTILITY/RESTART_LEVEL/TIP": "",
-  "UTILITY/PRACTICE_MODE": "",
-  "UTILITY/PRACTICE_MODE/TIP": "",
-  "UTILITY/SETTINGS": "",
-  "UTILITY/SETTINGS/TIP": "",
-  "UTILITY/FOLDERS/RESOURCES": "",
-  "UTILITY/FOLDERS/RESOURCES/TIP": "",
-  "UTILITY/FOLDERS/APPDATA": "",
-  "UTILITY/FOLDERS/APPDATA/TIP": "",
-  "SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT/TIP": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": ""
+  "DISPLAY": "Monitor",
+  "DISPLAY/FPS/SPINNER": "FPS:",
+  "DISPLAY/FPS/SPINNER/SUF": " FPS",
+  "DISPLAY/FPS/HACK_FPS": "Desbloquear FPS",
+  "DISPLAY/FPS/HACK_FPS/TIP": "Asigna los FPS del juego. Las físicas no cambiarán a menos de que uses Physics Bypass.",
+  "DISPLAY/TPS/SPINNER": "TPS:",
+  "DISPLAY/TPS/SPINNER/SUF": " TPS",
+  "DISPLAY/TPS/HACK_TPS": "Desbloquear TPS",
+  "DISPLAY/FPS/HACK_TPS/TIP": "Asigna los FPS del juego sin cambiar el número de FPS renderizados, reduciendo el delay. Las físicas no cambiarán a menos de que uses Physics Bypass.",
+  "DISPLAY/HACK_VSYNC": "Sincronización vertical",
+  "DISPLAY/HACK_VSYNC/TIP": "Sincroniza los FPS con los Hz del monitor, lo que reduce las roturas visuales.",
+  "DISPLAY/HACK_PHYSICS_BYPASS": "Physics Bypass",
+  "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "Desbloquea el límite por defecto de las fisicas (240 fps), configurandolas a los FPS/TPS que tengas asignado con mayor valor. Esto NO imita las físicas de la 2.1.",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA": "Bloquear Delta",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "Bloquea el tiempo entre frames (delta) mientras juegas, para mayor consistencia. Se usa mas que todo para grabar macros.",
+  "DISPLAY/DELTA/HACK_REAL_TIME": "Tiempo real",
+  "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "Tiempo real.", 
+  "DISPLAY/HACK_BORDERLESS_CLASSIC": "Sin bordes Legacy",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Implementa el método antiguo del modo sin bordes.",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Pantalla completa",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Le permite al juego cubrir toda la pantalla.",
+  "DISPLAY/FULLSCREEN/COMBO/0": "Exclusivo",
+  "DISPLAY/FULLSCREEN/COMBO/1": "Sin bordes",
+  "UTILITY": "Utilidad",
+  "UTILITY/CLICKS/P1": "Clicks J1",
+  "UTILITY/CLICKS/P2": "Clicks J2",
+  "UTILITY/DIRECTIONAL/P1_LEFT": "Izquierda",
+  "UTILITY/DIRECTIONAL/P1_RIGHT": "Derecha",
+  "UTILITY/DIRECTIONAL/P2_LEFT": "Izquierda",
+  "UTILITY/DIRECTIONAL/P2_RIGHT": "Derecha",
+  "UTILITY/UNCOMPLETE_LEVEL": "Borrar progreso",
+  "UTILITY/UNCOMPLETE_LEVEL/TIP": "Remueve el progreso y las estadísticas del nivel.",
+  "UTILITY/RESTART_LEVEL": "Reiniciar nivel",
+  "UTILITY/RESTART_LEVEL/TIP": "Reinicia el nivel actual.",
+  "UTILITY/PRACTICE_MODE": "Modo práctica",
+  "UTILITY/PRACTICE_MODE/TIP": "Activa el modo práctica.",
+  "UTILITY/SETTINGS": "Ajustes",
+  "UTILITY/SETTINGS/TIP": "Abre los ajustes del juego.",
+  "UTILITY/FOLDERS/RESOURCES": "Recursos",
+  "UTILITY/FOLDERS/RESOURCES/TIP": "Abre la carpeta de recursos del juego.",
+  "UTILITY/FOLDERS/APPDATA": "AppData",
+  "UTILITY/FOLDERS/APPDATA/TIP": "Abre la carpeta LocalAppData del juego.",
+  "SCREENSHOT": "Captura de pantalla",
+  "SCREENSHOT/SCREENSHOT": "Captura de pantalla",
+  "SCREENSHOT/SCREENSHOT/TIP": "Toma una captura de pantalla",
+  "SCREENSHOT/COPY_TO_CLIPBOARD": "Copiar al portapapeles",
+  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": "Copia la captura de pantalla hecha al portapapeles."
 }
