--- a/langs/es-MX.json
+++ b/langs/es-MX.json
@@ -282,7 +282,7 @@
   "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "Sincroniza la velocidad del juego con el audio del juego.",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "Modo clásico",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
-  "DISPLAY": "Monitor",
+  "DISPLAY": "Pantalla",
   "DISPLAY/FPS/SPINNER": "FPS:",
   "DISPLAY/FPS/SPINNER/SUF": " FPS",
   "DISPLAY/FPS/HACK_FPS": "Desbloquear FPS",
