--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -272,61 +272,61 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Самый высокий",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Приоритет потоков",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Изменяет приоритет процессора для игры, может помочь с производительностью",
-  "SPEEDHACK": "",
-  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
+  "SPEEDHACK": "Чит на скорость",
+  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Включено",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
-  "SPEEDHACK/LAYOUT/SPINNER": "",
-  "SPEEDHACK/LAYOUT/SPINNER/PRE": "",
-  "SPEEDHACK/LAYOUT/SPINNER/SUF": "",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "",
+  "SPEEDHACK/LAYOUT/SPINNER": "Скорость:",
+  "SPEEDHACK/LAYOUT/SPINNER/PRE": "Скорость: ",
+  "SPEEDHACK/LAYOUT/SPINNER/SUF": "x",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "Аудио скорость",
   "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "",
-  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "",
+  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "Классический режим",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
-  "DISPLAY": "",
-  "DISPLAY/FPS/SPINNER": "",
-  "DISPLAY/FPS/SPINNER/SUF": "",
-  "DISPLAY/FPS/HACK_FPS": "",
-  "DISPLAY/FPS/HACK_FPS/TIP": "",
-  "DISPLAY/TPS/SPINNER": "",
-  "DISPLAY/TPS/SPINNER/SUF": "",
-  "DISPLAY/TPS/HACK_TPS": "",
-  "DISPLAY/FPS/HACK_TPS/TIP": "",
-  "DISPLAY/HACK_VSYNC": "",
-  "DISPLAY/HACK_VSYNC/TIP": "",
-  "DISPLAY/HACK_PHYSICS_BYPASS": "",
-  "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "",
-  "DISPLAY/DELTA/HACK_REAL_TIME": "",
-  "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
-  "DISPLAY/FULLSCREEN/COMBO/0": "",
-  "DISPLAY/FULLSCREEN/COMBO/1": "",
-  "UTILITY": "",
-  "UTILITY/CLICKS/P1": "",
-  "UTILITY/CLICKS/P2": "",
-  "UTILITY/DIRECTIONAL/P1_LEFT": "",
-  "UTILITY/DIRECTIONAL/P1_RIGHT": "",
-  "UTILITY/DIRECTIONAL/P2_LEFT": "",
-  "UTILITY/DIRECTIONAL/P2_RIGHT": "",
-  "UTILITY/UNCOMPLETE_LEVEL": "",
-  "UTILITY/UNCOMPLETE_LEVEL/TIP": "",
-  "UTILITY/RESTART_LEVEL": "",
-  "UTILITY/RESTART_LEVEL/TIP": "",
-  "UTILITY/PRACTICE_MODE": "",
-  "UTILITY/PRACTICE_MODE/TIP": "",
-  "UTILITY/SETTINGS": "",
-  "UTILITY/SETTINGS/TIP": "",
-  "UTILITY/FOLDERS/RESOURCES": "",
-  "UTILITY/FOLDERS/RESOURCES/TIP": "",
-  "UTILITY/FOLDERS/APPDATA": "",
-  "UTILITY/FOLDERS/APPDATA/TIP": "",
-  "SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT/TIP": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": ""
+  "DISPLAY": "Дисплей",
+  "DISPLAY/FPS/SPINNER": "FPS:",
+  "DISPLAY/FPS/SPINNER/SUF": " FPS",
+  "DISPLAY/FPS/HACK_FPS": "Разблокировать FPS",
+  "DISPLAY/FPS/HACK_FPS/TIP": "Устанавливает целевое значение FPS в игре. Физика не изменится без активации обхода физики",
+  "DISPLAY/TPS/SPINNER": "TPS:",
+  "DISPLAY/TPS/SPINNER/SUF": " TPS",
+  "DISPLAY/TPS/HACK_TPS": "Разблокировать TPS",
+  "DISPLAY/FPS/HACK_TPS/TIP": "Устанавливает целевое значение TPS без изменения визуального FPS, уменьшая задержку ввода. Физика не изменится без активации обхода физики",
+  "DISPLAY/HACK_VSYNC": "Вертикальная синхронизация",
+  "DISPLAY/HACK_VSYNC/TIP": "Синхронизирует FPS с частотой экрана, снижая разрывы изображения",
+  "DISPLAY/HACK_PHYSICS_BYPASS": "Обход физики",
+  "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "Снимает стандартное ограничение физики в 240 кадров/сек, устанавливая его в соответствии с целевым FPS/TPS (что выше). Это НЕ эмулирует физику версии 2.1",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA": "Фиксация Delta",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "Фиксирует время кадра (delta) во время игры для повышения стабильности, используется в основном для автоматической игры",
+  "DISPLAY/DELTA/HACK_REAL_TIME": "Реальное время",
+  "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "Позволяет нескольким обработкам за кадр при использовании фиксации Delta, смягчая замедления",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC": "Безрамочный классический",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Классическая реализация безрамочного полноэкранного режима (отличается от встроенного режима GD)",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Полноэкранный режим",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Позволяет игре занимать весь основной экран",
+  "DISPLAY/FULLSCREEN/COMBO/0": "Эксклюзивный",
+  "DISPLAY/FULLSCREEN/COMBO/1": "Безрамочный",
+  "UTILITY": "Утилиты",
+  "UTILITY/CLICKS/P1": "P1 клик",
+  "UTILITY/CLICKS/P2": "P2 клик",
+  "UTILITY/DIRECTIONAL/P1_LEFT": "Влево",
+  "UTILITY/DIRECTIONAL/P1_RIGHT": "Вправо",
+  "UTILITY/DIRECTIONAL/P2_LEFT": "Влево",
+  "UTILITY/DIRECTIONAL/P2_RIGHT": "Вправо",
+  "UTILITY/UNCOMPLETE_LEVEL": "Снять прохождение уровня",
+  "UTILITY/UNCOMPLETE_LEVEL/TIP": "Снимает прохождение текущего уровня и удаляет статистику",
+  "UTILITY/RESTART_LEVEL": "Перезапустить уровень",
+  "UTILITY/RESTART_LEVEL/TIP": "Перезапускает текущий уровень",
+  "UTILITY/PRACTICE_MODE": "Режим практики",
+  "UTILITY/PRACTICE_MODE/TIP": "Включает или выключает режим практики в текущем уровне",
+  "UTILITY/SETTINGS": "Настройки",
+  "UTILITY/SETTINGS/TIP": "Открывает меню настроек в игре",
+  "UTILITY/FOLDERS/RESOURCES": "Resources",
+  "UTILITY/FOLDERS/RESOURCES/TIP": "Открывает папку Resources игры",
+  "UTILITY/FOLDERS/APPDATA": "AppData",
+  "UTILITY/FOLDERS/APPDATA/TIP": "Открывает папку LocalAppData игры",
+  "SCREENSHOT": "Скриншот",
+  "SCREENSHOT/SCREENSHOT": "Скриншот",
+  "SCREENSHOT/SCREENSHOT/TIP": "Делает скриншот",
+  "SCREENSHOT/COPY_TO_CLIPBOARD": "Копировать в буфер обмена",
+  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": "Копирует скриншот в буфер обмена"
 }
