--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -272,13 +272,13 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Самый высокий",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Приоритет потоков",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Изменяет приоритет процессора для игры, может помочь с производительностью",
-  "SPEEDHACK": "Чит на скорость",
+  "SPEEDHACK": "Спидхак",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Включено",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
   "SPEEDHACK/LAYOUT/SPINNER": "Скорость:",
   "SPEEDHACK/LAYOUT/SPINNER/PRE": "Скорость: ",
   "SPEEDHACK/LAYOUT/SPINNER/SUF": "x",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "Аудио скорость",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "Скорость аудио",
   "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "Классический режим",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
