--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -272,7 +272,7 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "가장 높음",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "스레드 우선순위",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "GD가 차지하는 CPU 시간을 조정하며 성능을 개선할 수 있습니다",
-  "SPEEDHACK": "",
+  "SPEEDHACK": "속도 조정",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
   "SPEEDHACK/LAYOUT/SPINNER": "",
@@ -282,7 +282,7 @@
   "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
-  "DISPLAY": "",
+  "DISPLAY": "화면",
   "DISPLAY/FPS/SPINNER": "",
   "DISPLAY/FPS/SPINNER/SUF": "",
   "DISPLAY/FPS/HACK_FPS": "",
@@ -295,8 +295,8 @@
   "DISPLAY/HACK_VSYNC/TIP": "",
   "DISPLAY/HACK_PHYSICS_BYPASS": "",
   "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA": "강제 FPS",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "설정한 FPS을 강제로 한다(느려/빨라질 수 있음)",
   "DISPLAY/DELTA/HACK_REAL_TIME": "",
   "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "",
   "DISPLAY/HACK_BORDERLESS_CLASSIC": "",
@@ -305,28 +305,27 @@
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "",
   "DISPLAY/FULLSCREEN/COMBO/1": "",
-  "UTILITY": "",
+  "UTILITY": "도구",
   "UTILITY/CLICKS/P1": "",
   "UTILITY/CLICKS/P2": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "",
   "UTILITY/DIRECTIONAL/P2_LEFT": "",
   "UTILITY/DIRECTIONAL/P2_RIGHT": "",
-  "UTILITY/UNCOMPLETE_LEVEL": "",
-  "UTILITY/UNCOMPLETE_LEVEL/TIP": "",
-  "UTILITY/RESTART_LEVEL": "",
+  "UTILITY/UNCOMPLETE_LEVEL": "레밸 진행 데이터 삭제",
+  "UTILITY/UNCOMPLETE_LEVEL/TIP": "진행 대이터을 삭제해줌(마나 구슬 빼고)",
+  "UTILITY/RESTART_LEVEL": "래밸 다시시작",
   "UTILITY/RESTART_LEVEL/TIP": "",
-  "UTILITY/PRACTICE_MODE": "",
-  "UTILITY/PRACTICE_MODE/TIP": "",
-  "UTILITY/SETTINGS": "",
-  "UTILITY/SETTINGS/TIP": "",
-  "UTILITY/FOLDERS/RESOURCES": "",
-  "UTILITY/FOLDERS/RESOURCES/TIP": "",
-  "UTILITY/FOLDERS/APPDATA": "",
-  "UTILITY/FOLDERS/APPDATA/TIP": "",
-  "SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT/TIP": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": ""
-}
+  "UTILITY/PRACTICE_MODE": "학습 모드",
+  "UTILITY/PRACTICE_MODE/TIP": "레밸을 배울 수 있다",
+  "UTILITY/SETTINGS": "설정",
+  "UTILITY/SETTINGS/TIP": "설정을 연다",
+  "UTILITY/FOLDERS/RESOURCES": "텍스쳐",
+  "UTILITY/FOLDERS/RESOURCES/TIP": "텍스쳐 폴더",
+  "UTILITY/FOLDERS/APPDATA": "GD의 폴더 열기",
+  "UTILITY/FOLDERS/APPDATA/TIP": "GD의 폴더을 연다",
+  "SCREENSHOT": "화면 캡쳐",
+  "SCREENSHOT/SCREENSHOT": "화면 캡쳐",
+  "SCREENSHOT/SCREENSHOT/TIP": "화면을 캡쳐해준다",
+  "SCREENSHOT/COPY_TO_CLIPBOARD": "클립보드에 복사",
+  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": "클립보드에 복사해준다"
