--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -272,61 +272,61 @@
   "UNIVERSAL/THREAD_PRIORITY/DROPDOWN/COMBO/4": "Cao nhất",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY": "Ưu tiên luồng",
   "UNIVERSAL/THREAD_PRIORITY/HACK_THREAD_PRIORITY/TIP": "Điều chỉnh lượng CPU cho GD, có thể cải thiện hiệu năng",
-  "SPEEDHACK": "",
-  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
-  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
-  "SPEEDHACK/LAYOUT/SPINNER": "",
-  "SPEEDHACK/LAYOUT/SPINNER/PRE": "",
-  "SPEEDHACK/LAYOUT/SPINNER/SUF": "",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "",
-  "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "",
-  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "",
-  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
-  "DISPLAY": "",
-  "DISPLAY/FPS/SPINNER": "",
-  "DISPLAY/FPS/SPINNER/SUF": "",
-  "DISPLAY/FPS/HACK_FPS": "",
-  "DISPLAY/FPS/HACK_FPS/TIP": "",
-  "DISPLAY/TPS/SPINNER": "",
-  "DISPLAY/TPS/SPINNER/SUF": "",
-  "DISPLAY/TPS/HACK_TPS": "",
-  "DISPLAY/FPS/HACK_TPS/TIP": "",
-  "DISPLAY/HACK_VSYNC": "",
-  "DISPLAY/HACK_VSYNC/TIP": "",
-  "DISPLAY/HACK_PHYSICS_BYPASS": "",
-  "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "",
-  "DISPLAY/DELTA/HACK_REAL_TIME": "",
-  "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
-  "DISPLAY/FULLSCREEN/COMBO/0": "",
-  "DISPLAY/FULLSCREEN/COMBO/1": "",
-  "UTILITY": "",
-  "UTILITY/CLICKS/P1": "",
-  "UTILITY/CLICKS/P2": "",
-  "UTILITY/DIRECTIONAL/P1_LEFT": "",
-  "UTILITY/DIRECTIONAL/P1_RIGHT": "",
-  "UTILITY/DIRECTIONAL/P2_LEFT": "",
-  "UTILITY/DIRECTIONAL/P2_RIGHT": "",
-  "UTILITY/UNCOMPLETE_LEVEL": "",
-  "UTILITY/UNCOMPLETE_LEVEL/TIP": "",
-  "UTILITY/RESTART_LEVEL": "",
-  "UTILITY/RESTART_LEVEL/TIP": "",
-  "UTILITY/PRACTICE_MODE": "",
-  "UTILITY/PRACTICE_MODE/TIP": "",
-  "UTILITY/SETTINGS": "",
-  "UTILITY/SETTINGS/TIP": "",
-  "UTILITY/FOLDERS/RESOURCES": "",
-  "UTILITY/FOLDERS/RESOURCES/TIP": "",
-  "UTILITY/FOLDERS/APPDATA": "",
-  "UTILITY/FOLDERS/APPDATA/TIP": "",
-  "SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT": "",
-  "SCREENSHOT/SCREENSHOT/TIP": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD": "",
-  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": ""
+  "SPEEDHACK": "Speedhack",
+  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Kích hoạt",
+  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Kích hoạt Speedhack giúp bạn thay đổi tốc độ của game",
+  "SPEEDHACK/LAYOUT/SPINNER": "Speed:",
+  "SPEEDHACK/LAYOUT/SPINNER/PRE": "Speed:",
+  "SPEEDHACK/LAYOUT/SPINNER/SUF": "x",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO": "Speedhack âm thanh",
+  "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "Giống Speedhack nhưng thay đổi kèm tốc độ của âm thanh",
+  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "Speedhack cũ",
+  "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "Giống Speedhack nhưng sử dụng phương pháp cũ",
+  "DISPLAY": "Hiển thị",
+  "DISPLAY/FPS/SPINNER": "FPS",
+  "DISPLAY/FPS/SPINNER/SUF": "FPS",
+  "DISPLAY/FPS/HACK_FPS": "Mở khóa FPS",
+  "DISPLAY/FPS/HACK_FPS/TIP": "Thay đổi FPS của game. Physics sẽ không thay đổi trừ khi sử dụng Physics Bypass",
+  "DISPLAY/TPS/SPINNER": "TPS",
+  "DISPLAY/TPS/SPINNER/SUF": "TPS",
+  "DISPLAY/TPS/HACK_TPS": "Mở khóa TPS",
+  "DISPLAY/FPS/HACK_TPS/TIP": "Thay đổi FPS của game, mà không thay đổi FPS khi kết xuất, giảm độ trễ đầu vào. Physics sẽ không thay đổi trừ khi sử dụng Physics Bypass",
+  "DISPLAY/HACK_VSYNC": "Đồng bộ dọc",
+  "DISPLAY/HACK_VSYNC/TIP": "Đồng bộ FPS với Hz của màn hình, làm giảm hiện tượng xé hình",
+  "DISPLAY/HACK_PHYSICS_BYPASS": "Physics Bypass",
+  "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "Mở khóa giới hạn Physics mặc định 240/giây, đặt nó thành FPS/TPS (tùy theo mức nào cao hơn). Điều này KHÔNG sao chép Physics 2.1",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA": "Khóa Delta",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "Khóa thời gian khung hình (delta) trong quá trình chơi để đảm bảo tính nhất quán, chủ yếu được sử dụng cho việc bot level",
+  "DISPLAY/DELTA/HACK_REAL_TIME": "Thời gian thực",
+  "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "Cho phép nhiều lần truyền qua mỗi khung hình khi sử dụng Khóa Delta, giảm thiểu tình trạng chậm lại",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC": "Borderless cũ",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Triển khai khả năng toàn màn hình không viền với phương pháp cũ (riêng biệt với cách triển khai của GD)",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Toàn màn hình",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Cho phép game lấp đầy màn hình của bạn",
+  "DISPLAY/FULLSCREEN/COMBO/0": "Loại trừ",
+  "DISPLAY/FULLSCREEN/COMBO/1": "Không viền",
+  "UTILITY": "Tiện ích",
+  "UTILITY/CLICKS/P1": "P1 Click",
+  "UTILITY/CLICKS/P2": "P2 Click",
+  "UTILITY/DIRECTIONAL/P1_LEFT": "Trái",
+  "UTILITY/DIRECTIONAL/P1_RIGHT": "Phải",
+  "UTILITY/DIRECTIONAL/P2_LEFT": "Trái",
+  "UTILITY/DIRECTIONAL/P2_RIGHT": "Phải",
+  "UTILITY/UNCOMPLETE_LEVEL": "Bỏ hoàn thành level",
+  "UTILITY/UNCOMPLETE_LEVEL/TIP": "Bỏ hoàn thành level hiện tại và xóa số liệu thống kê",
+  "UTILITY/RESTART_LEVEL": "Bắt đầu lại level",
+  "UTILITY/RESTART_LEVEL/TIP": "Bắt đầu lại level hiện tại",
+  "UTILITY/PRACTICE_MODE": "Chế độ luyện tập",
+  "UTILITY/PRACTICE_MODE/TIP": "Kích hoạt chế độ luyện tập trong level hiện tại",
+  "UTILITY/SETTINGS": "Cài đặt",
+  "UTILITY/SETTINGS/TIP": "Mở cài đặt trong game",
+  "UTILITY/FOLDERS/RESOURCES": "Resources",
+  "UTILITY/FOLDERS/RESOURCES/TIP": "Mở thư mục Resources của game",
+  "UTILITY/FOLDERS/APPDATA": "AppData",
+  "UTILITY/FOLDERS/APPDATA/TIP": "Mở thư mục AppData của game",
+  "SCREENSHOT": "Chụp màn hình",
+  "SCREENSHOT/SCREENSHOT": "Chụp màn hình",
+  "SCREENSHOT/SCREENSHOT/TIP": "Chụp màn hình (ừ)",
+  "SCREENSHOT/COPY_TO_CLIPBOARD": "Copy vào bảng nhớ tạm",
+  "SCREENSHOT/COPY_TO_CLIPBOARD/TIP": "Copy ảnh chụp màn hình vào bảng nhớ tạm"
 }
