--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -284,27 +284,27 @@
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
   "DISPLAY": "Bildschirm",
   "DISPLAY/FPS/SPINNER": "FPS:",
-  "DISPLAY/FPS/SPINNER/SUF": "FPS",
+  "DISPLAY/FPS/SPINNER/SUF": " FPS",
   "DISPLAY/FPS/HACK_FPS": "FPS entsperren",
   "DISPLAY/FPS/HACK_FPS/TIP": "",
   "DISPLAY/TPS/SPINNER": "TPS:",
-  "DISPLAY/TPS/SPINNER/SUF": "TPS entsperren",
+  "DISPLAY/TPS/SPINNER/SUF": " TPS",
   "DISPLAY/TPS/HACK_TPS": "",
   "DISPLAY/FPS/HACK_TPS/TIP": "",
   "DISPLAY/HACK_VSYNC": "",
   "DISPLAY/HACK_VSYNC/TIP": "",
   "DISPLAY/HACK_PHYSICS_BYPASS": "",
   "DISPLAY/HACK_PHYSICS_BYPASS/TIP": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA": "",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "",
-  "DISPLAY/DELTA/HACK_REAL_TIME": "",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA": "Delta sperren",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "Sperrt die Framezeit (Delta) während des Spiels für gleichmässigkeit. Oft für botting benutzt.",
+  "DISPLAY/DELTA/HACK_REAL_TIME": "Echtzeit",
   "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC": "",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "",
-  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
-  "DISPLAY/FULLSCREEN/COMBO/0": "",
-  "DISPLAY/FULLSCREEN/COMBO/1": "",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC": "Ohne Rahmen Klassisch",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "Klassische implementation vom Fullscreen-ohne-rahmen. (Separat zu Geometry Dash's implementation)",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Vollbild",
+  "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "Lässt das Spiel dein Hauptdisplay zu füllen.",
+  "DISPLAY/FULLSCREEN/COMBO/0": "Exklusiv",
+  "DISPLAY/FULLSCREEN/COMBO/1": "Ohne Rand",
   "UTILITY": "Tools",
   "UTILITY/CLICKS/P1": "Spieler 1 Klick",
   "UTILITY/CLICKS/P2": "Spieler 2 Klick",
@@ -320,10 +320,10 @@
   "UTILITY/PRACTICE_MODE/TIP": "Versetzt dich in den Übungsmodus",
   "UTILITY/SETTINGS": "Einstellungen",
   "UTILITY/SETTINGS/TIP": "Öffnet das Ingame Einstellungsmenü.",
-  "UTILITY/FOLDERS/RESOURCES": "",
-  "UTILITY/FOLDERS/RESOURCES/TIP": "",
-  "UTILITY/FOLDERS/APPDATA": "",
-  "UTILITY/FOLDERS/APPDATA/TIP": "",
+  "UTILITY/FOLDERS/RESOURCES": "Ressourcen",
+  "UTILITY/FOLDERS/RESOURCES/TIP": "Öffnet den Ordner in der die Ressourcen vom Spiel gespeichert sind.",
+  "UTILITY/FOLDERS/APPDATA": "LocalAppData",
+  "UTILITY/FOLDERS/APPDATA/TIP": "Öffnet den Ordner LocalAppData",
   "SCREENSHOT": "Bildschirmfoto",
   "SCREENSHOT/SCREENSHOT": "Bildschirmfoto",
   "SCREENSHOT/SCREENSHOT/TIP": "Nimmt ein Bildschirmfoto auf",
