--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -15,7 +15,7 @@
   "BYPASS": "",
   "BYPASS/HACK_MAIN_LEVELS": "Desbloquear os Demons Principais",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Desbloqueia todos os Demons Principais",
-  "BYPASS/HACK_MUSIC_UNLOCKER": "Desbloquear Música Normal no Modo ",
+  "BYPASS/HACK_MUSIC_UNLOCKER": "Desbloquear Música Normal no Modo Pratica",
   "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "",
   "BYPASS/HACK_SLIDER_LIMIT": "Deslizador Ilimitado",
   "BYPASS/HACK_SLIDER_LIMIT/TIP": "Deixa Você Usar o Deslizador Infinitamente",
@@ -125,26 +125,26 @@
   "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "Remove o Limite de Objetos dos Objetos Customizados",
   "CREATOR/HACK_DEFAULT_SONG_BYPASS": "",
   "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "",
-  "CREATOR/HACK_EDITOR_EXTENSION": "",
-  "CREATOR/HACK_EDITOR_EXTENSION/TIP": "",
-  "CREATOR/HACK_FREE_SCROLL": "",
-  "CREATOR/HACK_FREE_SCROLL/TIP": "",
-  "CREATOR/HACK_HIDE_UI": "",
-  "CREATOR/HACK_HIDE_UI/TIP": "",
-  "CREATOR/HACK_LEVEL_EDIT": "",
-  "CREATOR/HACK_LEVEL_EDIT/TIP": "",
-  "CREATOR/HACK_NO_C_MARK": "",
-  "CREATOR/HACK_NO_C_MARK/TIP": "",
-  "CREATOR/HACK_PLACE_OVER": "",
-  "CREATOR/HACK_PLACE_OVER/TIP": "",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "",
+  "CREATOR/HACK_EDITOR_EXTENSION": "Estender e a duração maxima do editor",
+  "CREATOR/HACK_EDITOR_EXTENSION/TIP": "Estende e a duração maxima do editor",
+  "CREATOR/HACK_FREE_SCROLL": "Deslize Infinito",
+  "CREATOR/HACK_FREE_SCROLL/TIP": "Deixa voce deslizar infinitamente no Editor",
+  "CREATOR/HACK_HIDE_UI": "Esconder Interface",
+  "CREATOR/HACK_HIDE_UI/TIP": "Esconde a Interface no Editor",
+  "CREATOR/HACK_LEVEL_EDIT": "Editar Niveis",
+  "CREATOR/HACK_LEVEL_EDIT/TIP": "Edite qualquer nivel online (A SUA EDIÇÃO SERA SALVA APENAS LOCALMENTE)",
+  "CREATOR/HACK_NO_C_MARK": "Remover Marca d'Água de Copia",
+  "CREATOR/HACK_NO_C_MARK/TIP": "Remove o "C" que indica que um level foi Copiado",
+  "CREATOR/HACK_PLACE_OVER": "Colocar objetos por cima",
+  "CREATOR/HACK_PLACE_OVER/TIP": "Te deixa colocar varios objetos um em cima do outro",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Trilha de Editor Suave",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Deixa a Trilha do Editor mais Suave",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "",
-  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "",
-  "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "",
-  "CREATOR/HACK_VERIFY_HACK": "",
-  "CREATOR/HACK_VERIFY_HACK/TIP": "",
+  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Ultrapassar Valor de Trigger",
+  "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Te deixa colocar valores maiores que o limite nos triggers",
+  "CREATOR/HACK_VERIFY_HACK": "Hack de Verificação",
+  "CREATOR/HACK_VERIFY_HACK/TIP": "Poste um Level sem Passar ele",
   "LEVEL": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "",
