--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -331,7 +331,7 @@
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "",
   "UNIVERSAL/HACK_NO_TRANSITION": "",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "",
-  "UNIVERSAL/HACK_SAFE_MODE": "",
+  "UNIVERSAL/HACK_SAFE_MODE": "Modo Seguro",
   "UNIVERSAL/HACK_SAFE_MODE/TIP": "",
   "UNIVERSAL/HACK_SAFE_MODE_POPUP": "",
   "UNIVERSAL/HACK_SAFE_MODE_POPUP/TIP": "",
