--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -55,15 +55,15 @@
   "HOME/MISC": "Bestelakoak",
   "HOME/MISC/LICENSES": "Lizentziak",
   "HOME/MISC/LOAD_LANG": "Hizkuntza Kargatu",
-  "HOME/MISC/LOAD_LEGACY_SAVE": "",
+  "HOME/MISC/LOAD_LEGACY_SAVE": "Kargatu v8-tik Gordetakoa",
   "HOME/MISC/LOGOUT": "Saioa Itxi",
   "KEYBINDS": "Lasterbideak",
   "KEYBINDS/SHORTCUT": "Lasterbidea Aukeratu",
   "KEYBINDS/SET": "Hack Bat Ezartzeko Aukeratu",
   "KEYBINDS/VIEW": "Ikusi Lasterbideak",
   "KEYBINDS/REMOVE": "Lasterbideak Ezabatu",
-  "KEYBINDS/DISABLE_IN_EDITOR": "",
-  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
+  "KEYBINDS/DISABLE_IN_EDITOR": "Editorean Desgaitu",
+  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Mega Hack-eko lasterbideak desgaitzen ditu maila editorea erabiltzean",
   "KEYBINDS/EMPTY": "Hutsik",
   "BYPASS": "Bypass",
   "BYPASS/HACK_MAIN_LEVELS": "Maila Nagusiak",
@@ -268,8 +268,8 @@
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Pausa-buffer-aren anticheat-a desgaitzen du",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Jaitsi Abestiak Automatikoki",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Mailaren orria irekitzean, abestiak automatikoki jaisten hasten dira",
-  "LEVEL/HACK_AUTO_START_POS": "",
-  "LEVEL/HACK_AUTO_START_POS/TIP": "",
+  "LEVEL/HACK_AUTO_START_POS": "StartPos Automatikoa",
+  "LEVEL/HACK_AUTO_START_POS/TIP": "Portaletan automatikoki StartPos kokatzen ditu",
   "LEVEL/HACK_CBF": "Click Between Frames",
   "LEVEL/HACK_CBF/TIP": "Syzzi-k sortutako Click Between Frames-eko etengailua (jadanik jaitsita egin behar da!)",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Mugaren Bypass",
@@ -410,8 +410,8 @@
   "UNIVERSAL/HACK_AUTO_SAFE_MODE/TIP": "Saiakera batean tranpak erabili badira, modu Segurua pizten du",
   "UNIVERSAL/HACK_FAST_CHESTS": "Altxor Bizkorrak",
   "UNIVERSAL/HACK_FAST_CHESTS/TIP": "Altxorren animazioa bizkortzen du",
-  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
-  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "",
+  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "Audioak Memorian Kargatu",
+  "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "Zure diskotik zuzenean igortzea ordez, audioak eta abestiak lehendabizi memorian kargatzen ditu; horrela, nahiz eta argatze-denborak pixka bat handitzen badira, errendimendua hobetu ahal dezake",
   "UNIVERSAL/HACK_LOCK_CURSOR": "Kurtsorea Giltzaperatu",
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Jolastean/Editatzean, kurtsorea lehioaren barruan giltzaperatzen du",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Jolastu Menu Nagusian",
